// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders correctly with data-testid 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="test"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeCenter hasTooltip"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="arrow arrow dark paddingSizeUndefined"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with end arrowPosition 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeCenter hasTooltip"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="arrow arrow dark paddingSizeUndefined"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with hideWhenReferenceHidden 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={null}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeCenter hasTooltip"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="arrow arrow dark paddingSizeUndefined"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with justify 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeEnd hasTooltip"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="arrow arrow dark paddingSizeUndefined"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with position 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent left edgeCenter hasTooltip"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="arrow arrow dark paddingSizeUndefined"
        data-placement="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with style 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeCenter hasTooltip"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "width": "200px",
          }
        }
      >
        test
      </div>
      <div
        className="arrow arrow dark paddingSizeUndefined"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with theme 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeCenter hasTooltip"
    >
      <div
        className="tooltip error paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="arrow arrow error paddingSizeUndefined"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with withoutDialog 1`] = `
<div
  className="tooltip dark paddingSizeUndefined"
>
  test
</div>
`;

exports[`Tooltip renders correctly without arrow 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top edgeCenter"
    >
      <div
        className="tooltip dark paddingSizeUndefined"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
    </div>
  </span>,
]
`;
